--- a/Nano Challenge 2/Info.plist
+++ b/Nano Challenge 2/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>We need Your Permission To Access Your Health</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>We need Your Permission To Access Your Health</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>We need Your Permission To Access Your Health</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
